[package]
name = "circom-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.9.0"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.18"

lsp-server = "0.7.6"

lsp-types = {version = "0.94.1", features = ["proposed"]}
parser.workspace = true
vfs.workspace = true
anyhow = "1.0.79"
dashmap = "5.5.3"

[profile]
dev.debug = 2
