[package]
name = "ccls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.9.0"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.18"

lsp-server = "0.7.6"

rowan = "0.15.15"

lsp-types = {version = "0.94.1", features = ["proposed"]}
parser.workspace = true
vfs.workspace = true
syntax.workspace = true

anyhow = "1.0.79"
dashmap = "5.5.3"
path-absolutize = "3.1.1"

[profile]
dev.debug = 2

[dev-dependencies]
# for snapshot testing, yaml format
insta = { version = "1.41.1", features = ["yaml"] }

[profile.dev.package]
# compile slightly slower once, but use less memory, have faster diffs
insta.opt-level = 3
similar.opt-level = 3
