[package]
name = "syntax"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.15.13"
parser.workspace = true

lsp-types = {version = "0.94.1", features = ["proposed"]}
